# xhypervisor

./: Cargo.toml  README.md  build.rs  test-runner.sh
.cargo/: config.toml
.github/workflows/: build.yml  format.yml  test.yml
src/: ffi.rs  lib.rs
src/aarch64/: ffi.rs  mod.rs
src/consts/: vmcs.rs
src/x86_64/: ffi.rs  mod.rs
src/x86_64/consts/: irq.rs  mod.rs  vmx_cap.rs  vmx_exit.rs
tests/: hvc.rs  hvdos.rs
