[package]
name = "xhypervisor"
version = "0.2.0"
authors = ["Stefan Lankes", "Saurav Sachidanand"]
edition = "2021"

license = "MIT"
repository = "https://www.github.com/RWTH-OS/xhypervisor"
documentation = "https://docs.rs/xhypervisor/"
readme = "README.md"
description = " Hardware-accelerated virtualization on OS X"
keywords = ["hypervisor", "virtualization", "osx", "x86", "aarch64"]

build = "build.rs"

[dependencies]
libc = "0.2"
thiserror = "1.0"
